udpate other libs and kotlin